--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 <body>
     <input type="checkbox" id="checkwala">
     <label for="checkwala">
-        <div class="circle"></div>
-        <div class="light">
-            <div class="clouds">
-                <div class="sun"></div>
-                <div class="cloud1"></div>
-                <div class="cloud2"></div>
-                <div class="cloud3"></div>
+        <div class="background">
+            <div class="circle"></div>
+            <div class="light">
+                <div class="clouds">
+                    <div class="sun"></div>
+                    <div class="cloud1"></div>
+                    <div class="cloud2"></div>
+                    <div class="cloud3"></div>
+                </div>
             </div>
-        </div>
-        <div class="dark">
-            <div class="moon"></div>
-            <div class="star1"></div>
-            <div class="star2"></div>
-            <div class="star3"></div>
+            <div class="dark">
+                <div class="moon"></div>
+                <div class="star1"></div>
+                <div class="star2"></div>
+                <div class="star3"></div>
+            </div>
         </div>
     </label>
     
